Updating scalafmt configuration

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,11 @@
-# tune this file as appropriate to your style!  see: https://olafurpg.github.io/scalafmt/#Configuration
+version = 3.8.3
+runner.dialect = scala213
+
+fileOverride {
+  "glob:**/scala-3/**" {
+    runner.dialect = scala3
+  }
+}
 
 maxColumn = 100
 
@@ -13,11 +20,8 @@ align {
   ifWhileOpenParen = false
   openParenCallSite = false
   openParenDefnSite = false
-
   tokens = ["%", "%%"]
 }
-
-docstrings = JavaDoc
 
 rewrite {
   rules = [SortImports, RedundantBraces]
